--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   background-color: #FF4C68;
 }
 
+.container-fluid {
+  padding: 3% 15%;
+}
+
 h1 {
   font-family: 'Montserrat-Black', sans-serif;
   font-size: 3rem;
