--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 h1 {
@@ -45,13 +45,18 @@ h1 {
 
 /* Title Image */
 .title-image {
-  width: 50%;
   transform: rotate(25deg);
+  position: absolute;
+  width: 20%;
+  right: 24%;
 }
 
 /* feature */
 #features {
   padding: 7% 15%;
+  background-color: white;
+  position: relative;
+  /* z-index: 1; */
 }
 
 .feature-box {
